# startup-python

./: .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
notebooks/: examples.ipynb
python_app/: cli.py
tests/: test_python_app.py
